# nnopinf

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: build_requirements.txt
docs/_templates/: class_template.rst
docs/dum/: .class_methods.rst.swp  class_methods.rst
docs/generated_docs/: .buildinfo  api.html  examples.html  genindex.html  getting_started.html  index.html  models.html  objects.inv  operators.html  search.html  searchindex.js  steppers.html  training.html  variables.html
docs/generated_docs/.doctrees/: api.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  models.doctree  operators.doctree  steppers.doctree  training.doctree  variables.doctree
docs/generated_docs/_modules/: index.html
docs/generated_docs/_sources/: api.rst.txt  examples.rst.txt  getting_started.rst.txt  index.rst.txt  variables.rst.txt
docs/source/: api.rst  conf.py  examples.rst  examples_burgers.rst  examples_heat_diffusion.rst  getting_started.rst  index.rst  models.rst  operators.rst  steppers.rst  training.rst  variables.rst
examples/burgers/: burgers_end_to_end.py
examples/diffusion/: heat_diffusion_end_to_end.py
nnopinf/: __init__.py  input_yaml.py  models.py  operators.py  steppers.py  variables.py
nnopinf/training/: __init__.py  normalizers.py  settings.py  trainers.py
test/: test_model.py  test_model_update.py  test_operator_update.py  test_operators.py  test_psd_lagrangian_operator_scaling.py  test_variables.py
test/training/: test_training.py
test/training/ml-models/: pytorch-model.pt
(+7 files in other folders)
