[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "nnopinf"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    'pyyaml',
    'numpy',
    'scipy',
    'torch',
    'tqdm',
    'matplotlib',
    'pytest==7.4.4',   # released Dec 31st, 2023
    'pytest-mpi>=0.6', # released Jan 8th, 2022
    'pytest-timeout',
]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["."]

#https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#optional-dependencies
[project.optional-dependencies]
WithMPI = ['mpi4py>3.1.4']
WithH5py = ['h5py']

